fixed horizontal scrollbar appearing

--- a/Stalkbook/WebContent/style.css
+++ b/Stalkbook/WebContent/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: "lucida grande",tahoma,verdana,arial,sans-serif;
-	margin: 0;
+	margin: 5px 0;
 	padding: 0;
 	width: 644px;
 	font-size: 1.0em;
@@ -21,8 +21,8 @@ body {
 #location {
 	position: absolute;
 	display: none;
-	width: 312px;
-	margin: 5px;
+	width: 297px;
+	margin: 0 5px;
 	top: 0px;
 	left: 322px;
 	height: 100%;
